# GPTTalker

./: .gitignore  123  199876.md  2603log.md  AGENTS.md  Makefile  README.md  START-HERE.md  audit_filelist_clean.txt  audit_filelist_tmp.txt  blocker1.md  bootstrap2.md  bootstrapfail.md  continuallylocked.md  gptlog.md  gptlog2.md  gpttalkerlog1.md  gpttalkerstuck1.md  minimaxlog.md  mm27.md  opencode.jsonc  pyproject.toml  reviewlog1.md  ruff.toml  scaffaudit.md  scafforge22.md  session-ses_2773.md  session01.md  session2.md  session3.md  session4.md  sessionlog0458.md  smoketest2.md  smoketest3.md  smoketestbroken.md
.junie/: guidelines.md
.opencode/agents/: gpttalker-backlog-verifier.md  gpttalker-docs-handoff.md  gpttalker-implementer-context.md  gpttalker-implementer-hub.md  gpttalker-implementer-node-agent.md  gpttalker-implementer.md  gpttalker-planner.md  (+13 more)
.well-known/: ai-plugin.json  openapi.yaml
docs/: AGENT-DELEGATION.md  validation.md
scripts/: __init__.py  run_lint.py  run_tests.py  validate.py
src/: __init__.py
tests/: __init__.py  conftest.py
tickets/: BOARD.md  CORE-001.md  CORE-002.md  CORE-003.md  CORE-004.md  CORE-005.md  CORE-006.md  CORE-007.md  CTX-001.md  CTX-002.md  CTX-003.md  CTX-004.md  CTX-005.md  EDGE-001.md  EDGE-002.md  EDGE-003.md  EDGE-004.md  EXEC-001.md  EXEC-002.md  EXEC-003.md  EXEC-004.md  EXEC-005.md  EXEC-006.md  EXEC-007.md  EXEC-008.md  EXEC-009.md  EXEC-010.md  EXEC-011.md  EXEC-012.md  EXEC-013.md  EXEC-014.md  FIX-001.md  FIX-002.md  FIX-003.md  FIX-004.md  FIX-005.md  FIX-006.md  FIX-007.md  FIX-008.md  FIX-009.md  (+75 more)
(+1251 files in other folders)
